package com.geekinstitut.smartmoney.model;

public enum CategoryType {
    INCOME, EXPENSE
}
