package com.geekinstitut.smartmoney.model;

public enum KeyType {
    EXPENSE_PLANNED_IN_MONTH, INCOME_PLANNED_IN_MONTH, START_BALANCE, MY_NAME, APP_NAME, APP_VERSION
}
